// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-step renders as current 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step ld-step--current" part="li" role="listitem">
      <ld-sr-only>
        Current:
      </ld-sr-only>
      <button aria-current="step" disabled="" part="button focusable" type="button">
        <slot></slot>
      </button>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders as done 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step ld-step--done ld-step--with-icon" part="li" role="listitem">
      <ld-sr-only>
        Done:
      </ld-sr-only>
      <button part="button focusable" type="button">
        <slot></slot>
      </button>
      <ld-icon name="checkmark"></ld-icon>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders as done but optional 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step ld-step--done ld-step--optional ld-step--with-icon" part="li" role="listitem">
      <ld-sr-only>
        Done (was optional):
      </ld-sr-only>
      <button part="button focusable" type="button">
        <slot></slot>
      </button>
      <ld-icon name="checkmark"></ld-icon>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders as optional 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step ld-step--optional" part="li" role="listitem">
      <ld-sr-only>
        Optional:
      </ld-sr-only>
      <button disabled="" part="button focusable" type="button">
        <slot></slot>
      </button>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders as skipped 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step ld-step--optional ld-step--skipped" part="li" role="listitem">
      <ld-sr-only>
        Skipped:
      </ld-sr-only>
      <button part="button focusable" type="button">
        <slot></slot>
      </button>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders default 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step" part="li" role="listitem">
      <button disabled="" part="button focusable" type="button">
        <slot></slot>
      </button>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders on brand color 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step ld-step--brand-color" part="li" role="listitem">
      <button disabled="" part="button focusable" type="button">
        <slot></slot>
      </button>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders vertical 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step ld-step--vertical" part="li" role="listitem">
      <button disabled="" part="button focusable" type="button">
        <slot></slot>
      </button>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders with custom icon 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step ld-step--custom-icon ld-step--with-icon" part="li" role="listitem">
      <button disabled="" part="button focusable" type="button">
        <slot></slot>
      </button>
      <ld-icon class="ld-icon" role="presentation">
        <mock:shadow-root>
          Not Found
        </mock:shadow-root>
      </ld-icon>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders with description 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step" part="li" role="listitem">
      <button disabled="" part="button focusable" type="button">
        <slot></slot>
      </button>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders with size prop 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step ld-step--lg" part="li" role="listitem">
      <button disabled="" part="button focusable" type="button">
        <slot></slot>
      </button>
    </li>
  </mock:shadow-root>
</ld-step>
`;

exports[`ld-step renders with text 1`] = `
<ld-step>
  <mock:shadow-root>
    <li class="ld-step" part="li" role="listitem">
      <button disabled="" part="button focusable" type="button">
        <slot></slot>
      </button>
    </li>
  </mock:shadow-root>
  Step 1
</ld-step>
`;
